--- a/gazebo/physics/CMakeLists.txt
+++ b/gazebo/physics/CMakeLists.txt
@@ -116,5 +116,6 @@ set (gtest_sources
   Inertial_TEST.cc
   Joint_TEST.cc
   PhysicsEngine_TEST.cc
+  RayShape_TEST.cc
   SphereShape_TEST.cc)
 gz_build_tests(${gtest_sources})
