Added hacd to generate bullet convex collision shapes

--- a/gazebo/physics/bullet/CMakeLists.txt
+++ b/gazebo/physics/bullet/CMakeLists.txt
@@ -2,6 +2,8 @@ include (${gazebo_cmake_dir}/GazeboUtils.cmake)
 
 include_directories(${BULLET_INCLUDE_DIRS})
 
+include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/deps/hacd/include)
+
 link_directories(${BULLET_LIBRARY_DIRS})
 
 add_definitions(${BULLET_CFLAGS})
@@ -58,6 +60,6 @@ gz_build_tests(${gtest_sources})
 
 gz_add_library(gazebo_physics_bullet ${sources})
 #add_definitions(mDBT_USE_DOUBLE_PRECISION -DBT_EULER_DEFAULT_ZYX)
-target_link_libraries(gazebo_physics_bullet ${BULLET_LIBRARIES})
+target_link_libraries(gazebo_physics_bullet gazebo_hacd ${BULLET_LIBRARIES})
 
 gz_install_library(gazebo_physics_bullet)
