--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -15,6 +15,7 @@ set (plugins
   ContactPlugin
   DepthCameraPlugin
   DiffDrivePlugin
+  DrillPlugin
   ForceTorquePlugin
   GpuRayPlugin
   JointTrajectoryPlugin
