Using robot_msgs package

--- a/gazebo/CMakeLists.txt
+++ b/gazebo/CMakeLists.txt
@@ -4,12 +4,14 @@ include_directories(SYSTEM
   ${Boost_INCLUDE_DIRS}
   ${PROTOBUF_INCLUDE_DIR}
   ${SDF_INCLUDE_DIRS}
+  ${ROBOT_MSGS_INCLUDE_DIRS}
 )
 
 link_directories(
   ${ogre_library_dirs}
   ${Boost_LIBRARY_DIRS}
   ${SDF_LIBRARY_DIRS}
+  ${ROBOT_MSGS_LIBRARY_DIRS}
   ${PROJECT_BINARY_DIR}/test
 )
 
