--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -5,10 +5,12 @@ include_directories(
   ${tinyxml_include_dirs}
   ${PROTOBUF_INCLUDE_DIR}
   ${SDF_INCLUDE_DIRS}
+  ${ROBOT_MSGS_INCLUDE_DIRS}
 )
 
 link_directories( 
   ${SDF_LIBRARY_DIRS}
+  ${ROBOT_MSGS_LIBRARY_DIRS}
 )
 
 if (HAVE_BULLET)
@@ -38,7 +40,7 @@ target_link_libraries(gzstats gazebo_msgs gazebo_common gazebo_transport pthread
 gz_install_executable(gzstats)
 
 add_executable(gzfactory gzfactory.cc)
-target_link_libraries(gzfactory gazebo_common gazebo_transport pthread)
+target_link_libraries(gzfactory gazebo_common gazebo_transport pthread ${ROBOT_MSGS_LIBRARIES})
 gz_install_executable(gzfactory)
 
 install (PROGRAMS gzmodel_create DESTINATION ${BIN_INSTALL_DIR})
