--- a/test/integration/CMakeLists.txt
+++ b/test/integration/CMakeLists.txt
@@ -41,6 +41,7 @@ set(tests
   #state_log.cc
   surface_properties.cc
   transceiver.cc
+  world.cc
   )
 
 if (MANPAGES_SUPPORT)
@@ -48,8 +49,6 @@ if (MANPAGES_SUPPORT)
 	      manpages.cc)
 endif()
 
-set (GZ_BUILD_TESTS_EXTRA_EXE_SRCS
-  "${PROJECT_SOURCE_DIR}/gazebo/Server.cc;${PROJECT_SOURCE_DIR}/gazebo/Master.cc;${PROJECT_SOURCE_DIR}/gazebo/gazebo.cc;${PROJECT_SOURCE_DIR}/test/ServerFixture.cc")
 gz_build_tests(${tests})
 
 if (ENABLE_TESTS_COMPILATION)
@@ -61,8 +60,6 @@ set(display_tests
 )
 
 # Build the display tests (need extra sources to compile)
-set (GZ_BUILD_TESTS_EXTRA_EXE_SRCS
-    "${PROJECT_SOURCE_DIR}/gazebo/Server.cc;${PROJECT_SOURCE_DIR}/gazebo/Master.cc;${PROJECT_SOURCE_DIR}/gazebo/gazebo.cc;${PROJECT_SOURCE_DIR}/test/ServerFixture.cc")
 gz_build_display_tests(${display_tests})
 
 set(dri_tests
@@ -70,14 +67,13 @@ set(dri_tests
   multicamera_sensor.cc
   gpu_laser.cc
   heightmap.cc
+  ogre_log.cc
   pr2.cc
   projector.cc
   rendering_sensor.cc
   speed_pr2.cc
 )
 
-set (GZ_BUILD_TESTS_EXTRA_EXE_SRCS
-    "${PROJECT_SOURCE_DIR}/gazebo/Server.cc;${PROJECT_SOURCE_DIR}/gazebo/Master.cc;${PROJECT_SOURCE_DIR}/gazebo/gazebo.cc;${PROJECT_SOURCE_DIR}/test/ServerFixture.cc")
 gz_build_dri_tests(${dri_tests})
 
 
