--- a/gazebo/msgs/CMakeLists.txt
+++ b/gazebo/msgs/CMakeLists.txt
@@ -39,6 +39,7 @@ set (msgs
   laserscan_stamped.proto
   light.proto
   link.proto
+  link_cmd.proto
   link_data.proto
   log_control.proto
   log_status.proto
