renaming ModelManipulator to EntityManipulator

--- a/gazebo/gui/CMakeLists.txt
+++ b/gazebo/gui/CMakeLists.txt
@@ -25,6 +25,7 @@ set (sources
   DataLogger.cc
   Editor.cc
   EntityMaker.cc
+  EntityManipulator.cc
   RenderWidget.cc
   GLWidget.cc
   GuiIface.cc
@@ -34,7 +35,6 @@ set (sources
   KeyEventHandler.cc
   LightMaker.cc
   MainWindow.cc
-  ModelManipulator.cc
   MeshMaker.cc
   ModelEditWidget.cc
   ModelListWidget.cc
@@ -72,11 +72,11 @@ set (headers
   BoxMaker.hh
   CylinderMaker.hh
   EntityMaker.hh
+  EntityManipulator.hh
   GuiIface.hh
   GuiEvents.hh
   KeyEventHandler.hh
   LightMaker.hh
-  ModelManipulator.hh
   MeshMaker.hh
   MouseEventHandler.hh
   ModelMaker.hh
